--- a/css/style.css
+++ b/css/style.css
@@ -153,3 +153,40 @@ nav{
     bottom: 0;
     width: 100%;
 }
+.imagen-signo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(133, 109, 176, 0.17);
+    width: 100%;
+    height: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 45px;
+    border: 1px solid black;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.imagen-signo img{
+    padding: 25px;
+    width: 75%;
+    height: 100%;
+}
+.boton-signo{
+    margin-bottom: 10px;
+    height: 100%;
+}
+.boton-signo:hover{
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(10px);
+}
+.imagen-signo-card img{
+    padding: 10px;
+    width: 50%;
+    height: auto;
+}
+.card-title{
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #0a53be;
+}
