--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@
     text-align: center;
 }
 
+.maqueta footer{
+    border-top: black 1px solid;
+    border-bottom: black 1px solid ;
+}
+.maqueta div{
+    border-top: black 1px solid;
+    border-right: black 1px solid;
+}
+
 p{
     margin: 0;
     padding: 0;
@@ -48,11 +57,19 @@ nav{
     position:relative;
     min-height: 200px;
 }
-.btn-primary{
+.card-text{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.card-body .btn-primary{
     position: absolute;
+}
+.btn-primary{
     background-color: red;
     border-color: white;
-    transform: translate(-50%, 100%);
 }
 .btn-primary:hover {
     color: red;
