--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,3 @@
-.container-fluid, footer{
-    font-family: 'Roboto', sans-serif;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.maqueta footer{
-    border-top: black 1px solid;
-    border-bottom: black 1px solid ;
-}
-.maqueta div{
-    border-top: black 1px solid;
-    border-right: black 1px solid;
-}
-
 p{
     margin: 0;
     padding: 0;
@@ -21,10 +5,6 @@ p{
 nav{
     background-color: #eca7f5;
     margin-bottom: 0;
-}
-.nav-item div {
-    display: flex;
-    align-items: center;
 }
 
 .nav-item img {
@@ -180,7 +160,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(133, 109, 176, 0.17);
+    background-color: rgba(0, 255, 173, 0.17);
     width: 100%;
     height: 100%;
     margin-top: 5px;
@@ -189,7 +169,10 @@ nav{
     border: 1px solid black;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
-
+.imagen-signo:hover{
+    transition: transform 0.3s ease-in-out;
+    transform: scale(0.9);
+}
 .imagen-signo img{
     padding: 25px;
     width: 75%;
@@ -197,11 +180,10 @@ nav{
 }
 .boton-signo{
     margin-bottom: 10px;
-    height: 100%;
+    height: 80%;
 }
 .boton-signo:hover{
-    transition: transform 0.3s ease-in-out;
-    transform: translateX(10px);
+    transition: transform 0.5s ease-in-out;
 }
 .imagen-signo-card img{
     padding: 10px;
